Fixed missing breaks in ltexts (fixes #37)

--- a/src/sass/slides/controls/patterns/_contentlist.scss
+++ b/src/sass/slides/controls/patterns/_contentlist.scss
@@ -7,6 +7,7 @@
     margin-top:2em;
     max-width:98vh;
     overflow-y:auto;
+    padding-right:0.6em;
     li{
         font-size:0.8em;
         list-style-type: none;
